@startuml

title __BANLIST's Class Diagram__\n

  package dataStructure {
    package dataStructure.banList {
      class BanList {
          - list : ArrayList<LimitedCard>
          - name : String
          + BanList()
          + BanList()
          + getName()
          + getList()
          + setName()
          + setList()
          + outputBanList()
      }
    }
  }
  

  package dataStructure {
    package dataStructure.banList {
      class LimitedCard {
          - cardName : String
          - numberOfCopies : int
          - status : String
          + LimitedCard()
          + LimitedCard()
          + getCardName()
          + getNumberOfCopies()
          + getStatus()
          + setCardName()
          + setNumberOfCopies()
          + setStatus()
      }
    }
  }
  

  BanList -up-|> Serializable
  LimitedCard -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
